# python-tocase

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  tox.ini
.github/workflows/: ci.yml
tests/: conftest.py  test_camel.py  test_constant.py  test_dot.py  test_header.py  test_kebab.py  test_pascal.py  test_recase.py  test_snake.py  test_title.py
tocase/: for_pandas.py  for_strings.py  tocase.py
