[tool.poetry]
name = "tocase"
version = "0.2.3"
description = "tocase provides an API to recase string into any case"
authors = ["fbraza <fbraza@tutanota.com>"]
license = "MIT"
keywords = ["string", "pandas", "regex"]
readme = "README.md"
homepage = "https://github.com/fbraza/toCase"
repository = "https://github.com/fbraza/toCase"
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.7.9"
regex = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pynvim = "^0.4.3"
flake8 = "^3.9.0"
jupyter = "^1.0.0"
pandas = "^1.2.3"
numpy = "1.20.3"
commitizen = "^2.16.0"
pre-commit = "^2.11.1"
jedi = "*"
python-language-server = { version = "*", extras = ["all"]}
black = "^21.7b0"
pylint = "^2.9.5"
tox = "^3.24.0"
tox-poetry-installer = {extras = ["poetry"], version = "^0.8.1"}
tox-gh-actions = "^2.6.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
